# rollup

./: .gitignore  Cargo.toml  docker-compose.yml  geth-entry.sh
client/: package-lock.json  package.json
client/src/: index.ts
client/src/constant/: addresses.json
client/src/demo/: helper.ts  index.ts  l1client.ts  l2client.ts  types.ts
client/test/: index.ts
core/lib/bus-mapping/: README.md
core/lib/bus-mapping/src/: circuit_input_builder.rs  mock.rs
core/lib/dac_client/: Cargo.toml
core/lib/dac_client/src/: celestia.rs  dac_client.rs  lib.rs  redis_client.rs  test.rs  utils.rs
core/lib/geth-utils/: README.md
core/lib/halo_proofs/: Cargo.toml  test_commands.md
core/lib/halo_proofs/src/: helper.rs  lib.rs  params.rs
core/lib/halo_proofs/src/chips/: deposit.rs  merkle_tree_keccak.rs  mod.rs  poseidon.rs
core/lib/halo_proofs/src/circuits/: _merkle_circuit.rs  block_data.rs  circuit_builder.rs  deposit.rs  evm_circuit.rs  main_circuit.rs  merkle_circuit.rs  merkle_circuit_bk0.rs  merkle_circuit_chip.rs  merkle_keccak_circuit.rs  mod.rs  opcodes.rs  params.rs  pi_circuit.rs  simplified_circuit.rs  state_circuit.rs  state_circuit_origin.rs  table.rs  test_util.rs  util.rs
core/lib/halo_proofs/src/circuits/circuit_builder/: access.rs  block.rs  state_db.rs  state_ref.rs  transaction.rs
core/lib/halo_proofs/src/circuits/evm_circuit/: table.rs  util.rs
core/lib/halo_proofs/src/circuits/keccak_circuit/: keccak_packed_multi.rs  util.rs
core/lib/halo_proofs/src/circuits/opcodes/: address.rs  balance.rs  calldatacopy.rs  calldataload.rs  calldatasize.rs  caller.rs  callop.rs  callvalue.rs  codecopy.rs  codesize.rs  create.rs  dup.rs  error_invalid_jump.rs  error_oog_call.rs  exp.rs  extcodecopy.rs  extcodehash.rs  extcodesize.rs  gasprice.rs  logs.rs  mload.rs  mstore.rs  number.rs  origin.rs  return_revert.rs  returndatacopy.rs  returndatasize.rs  selfbalance.rs  sha3.rs  sload.rs  sstore.rs  stackonlyop.rs  stop.rs  swap.rs
core/lib/halo_proofs/src/circuits/state_circuit/: constraint_builder.rs  lexicographic_ordering.rs  lookups.rs  multiple_precision_integer.rs  random_linear_combination.rs  test.rs
core/lib/halo_proofs/src/circuits/witness/: block.rs  mpt.rs  tx.rs
core/lib/halo_proofs/src/eth_types/: mod.rs  mod0.rs
core/lib/halo_proofs/src/gadgets/: cond_swap.rs  mod.rs
core/lib/halo_proofs/src/hasher/: bn256.rs  csbox.rs  keccak256.rs  mod.rs  rescue.rs  rescue0.rs  rescue_hasher.rs  rescue_hasher0.rs  simple_hasher.rs  test.rs
core/lib/halo_proofs/src/instructions/: deposit.rs  mod.rs
core/lib/halo_proofs/src/keccak256/: arith_helpers.rs  gate_helpers.rs  hasher.rs  keccak_arith.rs  mod.rs  plain.rs  util.rs
core/lib/halo_proofs/src/state/: mod.rs  state.rs
core/lib/halo_proofs/src/tests/: account.rs  deposit.rs  helper.rs  mod.rs  sinsemilla_merkle_tree.rs  utils.rs
core/lib/halo_proofs/src/transactions/: deposit.rs  mod.rs
core/lib/prover_utils/src/: lib.rs
core/lib/state/src/handler/: withdraw.rs
core/lib/zkevm-circuits/: Cargo.toml
core/lib/zkevm-circuits/src/: evm_circuit.rs  lib.rs  table.rs  util.rs  witness.rs
core/lib/zkevm-circuits/src/witness/: mpt.rs  rw.rs
core/tests/ts-tests/: package.json
core/tests/ts-tests/tests/demo/: client.ts  helper.ts  index.ts
docker/dac/: docker-compose-redis.yml
docker/zk-environment/: docker-compose.yml
docs/: launch.md
etc/env/: docker.env
infrastructure/zk/src/: up.ts
infrastructure/zk/src/run/: demo.ts  run.ts
