[package]
name = "dac_client"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
envy = "0.4"
lazy_static = "1.4.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
zksync_config = { path = "../config", version = "1.0" }
zksync_types = { path = "../types", version = "1.0" }
vlog = { path = "../vlog", version = "1.0" }
anyhow = "1.0"
futures = "0.3"
rand = "0.8.5"
hex = "0.4.3"
hex-string = "0.1.0"
reqwest = { version = "0.11", features = ["json"] }
#hyper = { version = "0.14", features = ["full"] }
tokio = { version = "1", features = ["full"] }
#jsonrpc_client = "0.7.1"
redis = { version = "0.22.1" }